HDPI-3858 Use imports instead of declaring for each line